New module "Admin" created and all the Components moved under it.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,11 +11,15 @@
       <a class="nav-link" routerLink="dashboard">Dashboard</a>
     </li>
     <li class="nav-item">
+      <a class="nav-link" routerLink="my-profile">My Profile</a>
+    </li>
+    <li class="nav-item">
       <a class="nav-link" routerLink="about">About</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" routerLink="contact-us">Contact Us</a>
     </li>
+    
   </ul> 
   <form class="form-inline my-2 my-lg-0">
     <div class="input-group">
