--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,10 @@
       <a class="nav-link" routerLink="dashboard">Dashboard</a>
     </li>
     <li class="nav-item">
+      <a class="nav-link" routerLink="project">Project</a>
+    </li>
+    
+    <li class="nav-item">
       <a class="nav-link" routerLink="my-profile">My Profile</a>
     </li>
     <li class="nav-item">
